<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:paddingHorizontal="8dp"
        android:src="@drawable/ic_back_on_background_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="?attr/textHeadline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_set_wallet_name"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_description"
        style="?attr/textBody2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/describe_set_wallet_name"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_creating"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/anim_create_wallet" />

    <TextView
        android:id="@+id/tv_title_wallet_name"
        style="?attr/textBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="@string/message_name_wallet"
        android:textColor="?attr/colorOnBackgroundVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_creating" />

    <EditText
        android:id="@+id/et_wallet_name"
        style="?attr/textBody1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_corners_16dp_stroke_dash_1dp_divider"
        android:hint="@string/wallet_name"
        android:maxLength="32"
        android:paddingHorizontal="16dp"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackgroundVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_wallet_name" />


    <TextView
        android:id="@+id/tv_create"
        style="?attr/textHeadline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_corners_16dp_state_accent_and_background_variant"
        android:gravity="center"
        android:paddingVertical="14dp"
        android:text="@string/action_create"
        android:textColor="@color/color_state_on_background_variant_and_on_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorOnAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_create"
        app:layout_constraintStart_toStartOf="@+id/tv_create"
        app:layout_constraintTop_toTopOf="@+id/tv_create"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>